manifests/ingresses/grafana-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: $CLUSTER_NAME
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.$CLUSTER_NAME.$MONITORING_DOMAIN_NAME.
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: grafana
 namespace: $CLUSTER_NAME
 annotations:
   cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.$CLUSTER_NAME.$MONITORING_DOMAIN_NAME
      secretName: grafana-$CLUSTER_NAME-letsencrypt-crt
  rules:
  - host: grafana.$CLUSTER_NAME.$MONITORING_DOMAIN_NAME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
