manifests/ingresses/prometheus-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: $CLUSTER_NAME
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prometheus.$CLUSTER_NAME.$MONITORING_DOMAIN_NAME.
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: prometheus
 namespace: $CLUSTER_NAME
 annotations:
   cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus.$CLUSTER_NAME.$MONITORING_DOMAIN_NAME
      secretName: prometheus-$CLUSTER_NAME-letsencrypt-crt
  rules:
  - host: prometheus.$CLUSTER_NAME.$MONITORING_DOMAIN_NAME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
